Fixed buttons not showing white text or outlines on dark background.

--- a/source/stylesheets/index.scss
+++ b/source/stylesheets/index.scss
@@ -1780,7 +1780,7 @@ html {
                 /* Other */
               }
 
-              .more {
+              .button {
 
                 .link {
                 /* Positioning */
@@ -1823,7 +1823,7 @@ html {
 
               }
 
-              .text {
+              .button {
 
                 .link {
                   /* Positioning */
@@ -1832,14 +1832,6 @@ html {
                   /* Typography */
                   color: $white-100;
                   /* Other */
-
-                  p {
-                    /* Positioning */
-                    /* Display and Box model */
-                    /* Typography */
-                    color: $white-100;
-                    /* Other */
-                  }
 
                   &:hover {
                     /* Positioning */
@@ -2017,7 +2009,7 @@ html {
                 /* Other */
               }
 
-              .more {
+              .button {
 
                 .link {
                 /* Positioning */
@@ -2060,7 +2052,7 @@ html {
 
               }
 
-              .text {
+              .button {
 
                 .link {
                   /* Positioning */
@@ -2069,14 +2061,6 @@ html {
                   /* Typography */
                   color: $white-100;
                   /* Other */
-
-                  p {
-                    /* Positioning */
-                    /* Display and Box model */
-                    /* Typography */
-                    color: $white-100;
-                    /* Other */
-                  }
 
                   &:hover {
                     /* Positioning */
@@ -2185,7 +2169,7 @@ html {
                 /* Other */
               }
 
-              .more {
+              .button {
 
                 .link {
                 /* Positioning */
